# muxp

./: README.md  setup.cfg
src/muxp/: __init__.py
src/muxp.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/muxp/api/: __init__.py  _client.py  _server.py
src/muxp/comm/: __init__.py  _codec.py  _proto.py  _tls.py  security.py
tests/: client.py  server.py
tests/certs/ssl/: ca.crt  ca.key  ca.srl  client.crt  client.csr  client.key  openssl.cnf  server.crt  server.csr  server.key
