[metadata]
name = muxp
version = 0.1.0
author = laazua
description = 一个支持TLS双向认证与粘包处理的通信框架
long_description = file: README.md
long_description_content_type = text/markdown
keywords = tls, socket, ssl, python
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
#install_requires =
#    websockets

[options.packages.find]
where = src

[options.entry_points]
# 可选：暴露 CLI 接口
# console_scripts =
#     muxp-server = muxp.api.server:main

[tool.setuptools]
include-package-data = true
